# goit-pyweb-hw-10

goit-pyweb-hw-10/: pyproject.toml
goit-pyweb-hw-10/hw_dj_proj/content/: forms.py  models.py  urls.py  views.py
goit-pyweb-hw-10/hw_dj_proj/content/templates/content/: user_quotes_list.html
goit-pyweb-hw-10/hw_dj_proj/hw_dj_proj/: settings.py
goit-pyweb-hw-10/hw_dj_proj/quotes/: utils.py
goit-pyweb-hw-10/hw_dj_proj/users/: forms.py  models.py  views.py
goit-pyweb-hw-10/hw_dj_proj/users/templates/users/: login.html  register.html
