[tool.poetry]
name = "goit-pyweb-hw-10"
version = "0.1.0"
description = ""
authors = ["MaxRevan <gladkovnissan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
pymongo = "^4.10.1"
python-dotenv = "^1.0.1"
mongoengine = "^0.29.1"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
